--- a/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/templates/index.html
+++ b/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/templates/index.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <title>Sistema de Odontología</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div class="d-flex align-items-center justify-content-center vh-100">
+    <div>
+        <h1 class="text-center mb-4">Clínica Odontológica</h1>
 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5 class="card-title">Odontólogos</h5>
+                        </div>
+                        <div class="card-body">
+                            <a href="odontologos_listar.html" class="btn btn-primary">Listar todos</a>
+                            <a href="odontologos_ingresar.html" class="btn btn-primary">Registrar</a>
+                            <a href="odontologos_eliminar.html" class="btn btn-danger">Eliminar por ID</a>
+                            <a href="odontologos_actualizar.html" class="btn btn-success">Actualizar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5 class="card-title">Pacientes</h5>
+                        </div>
+                        <div class="card-body">
+                            <a href="pacientes_listar.html" class="btn btn-primary">Listar todos</a>
+                            <a href="pacientes_ingresar.html" class="btn btn-primary">Registrar</a>
+                            <a href="pacientes_eliminar.html" class="btn btn-danger">Eliminar por ID</a>
+                            <a href="pacientes_actualizar.html" class="btn btn-success">Actualizar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5 class="card-title">Turnos</h5>
+                        </div>
+                        <div class="card-body">
+                            <a href="turnos_listar.html" class="btn btn-primary">Listar todos</a>
+                            <a href="turnos_ingresar.html" class="btn btn-primary">Registar</a>
+                            <a href="turnos_eliminar.html" class="btn btn-danger">Eliminar po ID</a>
+                            <a href="turnos_actualizar.html" class="btn btn-success">Actualizar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
