--- a/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/templates/index.html
+++ b/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/templates/index.html
@@ -16,13 +16,10 @@
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-header">
-                            <h5 class="card-title">Odontólogos</h5>
+                            <h5 class="card-title">Odontólogo</h5>
                         </div>
                         <div class="card-body">
-                            <a href="odontologos_listar.html" class="btn btn-primary">Listar todos</a>
-                            <a href="odontologos_ingresar.html" class="btn btn-primary">Registrar</a>
-                            <a href="odontologos_eliminar.html" class="btn btn-danger">Eliminar por ID</a>
-                            <a href="odontologos_actualizar.html" class="btn btn-success">Actualizar</a>
+                            <a href="odontologo.html" class="btn btn-primary">Operaciones</a>
                         </div>
                     </div>
                 </div>
@@ -30,13 +27,10 @@
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-header">
-                            <h5 class="card-title">Pacientes</h5>
+                            <h5 class="card-title">Paciente</h5>
                         </div>
                         <div class="card-body">
-                            <a href="pacientes_listar.html" class="btn btn-primary">Listar todos</a>
-                            <a href="pacientes_ingresar.html" class="btn btn-primary">Registrar</a>
-                            <a href="pacientes_eliminar.html" class="btn btn-danger">Eliminar por ID</a>
-                            <a href="pacientes_actualizar.html" class="btn btn-success">Actualizar</a>
+                            <a href="paciente.html" class="btn btn-primary">Operaciones</a>
                         </div>
                     </div>
                 </div>
@@ -44,13 +38,10 @@
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-header">
-                            <h5 class="card-title">Turnos</h5>
+                            <h5 class="card-title">Turno</h5>
                         </div>
                         <div class="card-body">
-                            <a href="turnos_listar.html" class="btn btn-primary">Listar todos</a>
-                            <a href="turnos_ingresar.html" class="btn btn-primary">Registar</a>
-                            <a href="turnos_eliminar.html" class="btn btn-danger">Eliminar po ID</a>
-                            <a href="turnos_actualizar.html" class="btn btn-success">Actualizar</a>
+                            <a href="turno.html" class="btn btn-primary">Operaciones</a>
                         </div>
                     </div>
                 </div>
